#
# Copyright (c) 2010, Oracle and/or its affiliates. All rights reserved.
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# DEALINGS IN THE SOFTWARE.
#

if ENABLE_SPECS

specdir = $(docdir)/$(subdir)
doc_sources = xkblib.xml
dist_spec_DATA = 		\
	$(doc_sources)		\
	acknowledgement.xml	\
	ch01.xml		\
	ch02.xml		\
	ch03.xml		\
	ch04.xml		\
	ch05.xml		\
	ch06.xml		\
	ch07.xml		\
	ch08.xml		\
	ch09.xml		\
	ch10.xml		\
	ch11.xml		\
	ch12.xml		\
	ch13.xml		\
	ch14.xml		\
	ch15.xml		\
	ch16.xml		\
	ch17.xml		\
	ch18.xml		\
	ch19.xml		\
	ch20.xml		\
	ch21.xml		\
	ch22.xml		\
	glossary.xml		\
	XKBlib-1.gif		\
	XKBlib-2.gif		\
	XKBlib-3.gif		\
	XKBlib-4.gif		\
	XKBlib-5.gif		\
	XKBlib-6.gif		\
	XKBlib-7.gif		\
	XKBlib-8.gif		\
	XKBlib-9.gif		\
	XKBlib-10.gif		\
	XKBlib-11.gif		\
	XKBlib-12.gif		\
	XKBlib-13.gif		\
	XKBlib-14.gif		\
	XKBlib-15.gif		\
	XKBlib-16.gif		\
	XKBlib-17.gif		\
	XKBlib-18.gif		\
	XKBlib-19.gif		\
	XKBlib-20.gif		\
	XKBlib-21.gif

include $(top_srcdir)/specs/xmlrules.in

endif ENABLE_SPECS
